# RTMpose-OpenVINO

./: CMakeLists.txt  LICENSE  README.md  RTMpose_openvino.sln  RTMpose_openvino.vcxproj  RTMpose_openvino.vcxproj.filters  detection_results.h  main.cpp  openvino_model_base.cpp  openvino_model_base.h  pose_results.h  rtmdet_openvino.cpp  rtmdet_openvino.h  rtmpose_openvino.cpp  rtmpose_openvino.h  rtmpose_tracker_openvino.cpp  rtmpose_tracker_openvino.h  rtmpose_utils.h
model/: .gitkeep
